--- a/index.html
+++ b/index.html
@@ -5,6 +5,224 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
   </head>
-  <body></body>
+  <body class="body">
+
+   <!--- Шапка сайта --->
+   <header class="header">
+    <nav class="header__menu">
+      <ul class="header__list">
+        <li class="header__list-item header__list-item_not-bullit">
+          <a class="header__link header__link_active" href="#">главная</a>
+        </li>
+
+        <li class="header__list-item">
+          <a class="header__link" href="#">посмотреть лоты</a>
+        </li>
+
+        <li class="header__list-item">
+          <a class="header__link" href="#">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+
+    <!--- Логотип сайта --->
+    <a class="header__logo-image"
+      ><img src="images/logo-black.svg" class="header__logo" alt="Логотип сайта Оно тебе надо"
+    /></a>
+
+    <!--- Контакты сайта --->
+    <address class="address header__address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263-265, Амстердам</p>
+    </address>
+  </header>
+  <main>
+
+    <!--- Cекция COVER ---->
+    <section class="cover">
+      <div class="overlay"></div>
+      <h1 class="cover__title">
+        <span class="aligned-text__left"
+          >О<span class="letter-spacing-extended">НО</span>
+        </span>
+        <span class="aligned-text__center"
+          >TЕ<span class="letter-spacing-extended">БЕ</span>
+        </span>
+        <span class="aligned-text__right">
+          <span class="letter-spacing-extended">Н</span>АД<span
+            class="not-letter-spacing"
+            >О</span>
+        </span>
+      </h1>
+
+      <!--- Контейнер для подзаголовка и кнопки --->
+      <div class="cover__text">
+
+        <!--- Подзаголовок --->
+        <p class="cover__text-description">
+          Аукцион вещей, в которые никто не верил
+        </p>
+
+        <!--- Кнопка --->
+        <button class="bet-button" type="button">сделать ставку</button>
+      </div>
+    </section>
+
+    <!---  Cекция Лоты --->
+    <section class="lots">
+      <h2 class="lots__title">ЛОТЫ</h2>
+      <ul class="lots__card-list">
+
+             <!--- 1-я карточка --->
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_about_film">
+              <div class="overlay"></div>
+              <div class="card__content">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </div>
+            </article>
+          </a>
+        </li>
+
+        <!--- 2-я карточка --->
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_about_book">
+              <div class="overlay"></div>
+              <div class="card__content">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного
+                  агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                  и с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </div>
+            </article>
+          </a>
+        </li>
+
+         <!--- 3-я карточка --->
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_about_picture">
+              <div class="overlay"></div>
+              <div class="card__content">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </div>
+            </article>
+          </a>
+        </li>
+      </ul>
+
+      <!-- Ссылка на Посмотреть больше -->
+      <a class="lots__look-more-link" href="#">ПОСМОТРЕТЬ БОЛЬШЕ</a>
+    </section>
+
+    <!--- Cекция Аукцион --->
+    <section class="about">
+      <div class="about__column">
+        <div class="about__logo-container">
+          <div class="about__logo">
+            <img
+              src="images/logo-white.svg"
+              class="about__logo-image"
+              alt="logo"
+            />
+          </div>
+        </div>
+        <div class="about__description-container">
+          <h2 class="about__title">об аукционе</h2>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть
+              ни на один аукцион. Потому что кому нужен дневник
+              девочки-подростка или картина, которую может нарисовать даже
+              ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас
+              эти лоты стали культовыми.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!--- Подвал сайта *Footer* --->
+  <footer class="footer">
+    <address class="address footer__address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263-265, Амстердам</p>
+    </address>
+    <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item">
+          <a class="footer__link footer__link_active" href="#">главная</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__link" href="#">посмотреть лоты</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__link" href="#">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="footer__social-list">
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#">
+          <img src="images/yt.svg" class="footer__social-icon" alt="img" />
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#">
+          <img src="images/vk.svg" class="footer__social-icon" alt="img" />
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#">
+          <img
+            src="images/pinterest.svg"
+            class="footer__social-icon"
+            alt="img"
+          />
+        </a>
+      </li>
+    </ul>
+  </footer>
+</body>
 </html>
