--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <!--- Контакты сайта --->
     <address class="address header__address">
-      <a href="tel:+99995555555">+9 999 555 5555</a>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+      <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263-265, Амстердам</p>
     </address>
   </header>
@@ -185,8 +185,8 @@
   <!--- Подвал сайта *Footer* --->
   <footer class="footer">
     <address class="address footer__address">
-      <a href="tel:+99995555555">+9 999 555 5555</a>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+      <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263-265, Амстердам</p>
     </address>
     <nav class="footer__menu">
